Changed back to fixed sidebar position. Realized that's going make more problems. Now need to figure out how to get these elements nicely aligned...

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ figure {
   padding-bottom: 40px;
   float: left;
   width: 300px;
-  position: relative;
+  position: fixed;
   overflow-y: scroll;
   z-index: 1001;
   background: #f2f3f7;
